--- a/learning_logs/templates/learning_logs/base.xhtml
+++ b/learning_logs/templates/learning_logs/base.xhtml
@@ -32,7 +32,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:login' %}">- Log in</a>
+                        <a class="nav-link" href="{% url 'accounts:login' %}">Log in</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
