--- a/accounts/templates/registration/register.xhtml
+++ b/accounts/templates/registration/register.xhtml
@@ -1,6 +1,6 @@
 {% extends 'learning_logs/base.xhtml' %}
 
-{% load bootstrap5 %}
+{% load django_bootstrap5 %}
 
 {% block page_header %}
 <h2>Register</h2>
